added passing msf_token via http headers

--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "krzychu12350/phpmetasploit": "dev-methods-access-modifiers",
         "nastuzzi-samy/reflection-namespace": "dev-master",
         "izniburak/laravel-auto-routes": "dev-main",
         "spatie/laravel-route-attributes": "dev-main",
-        "composer-plugin-api": "^2.3"
+        "composer-plugin-api": "^2.3",
+        "krzychu12350/phpmetasploit": "dev-master"
     },
     "require-dev": {
         "composer/composer": "^2.0"
