--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,10 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "izniburak/laravel-auto-routes": "dev-main",
         "spatie/laravel-route-attributes": "dev-main",
         "composer-plugin-api": "^2.3",
         "krzychu12350/phpmetasploit": "dev-error-handling",
-        "spatie/laravel-settings": "dev-main",
-        "arcanedev/laravel-settings": "dev-master",
-        "predis/predis": "dev-main"
+        "arcanedev/laravel-settings": "dev-master"
     },
     "require-dev": {
         "composer/composer": "^2.0"
