--- a/composer.json
+++ b/composer.json
@@ -17,17 +17,22 @@
         "arcanedev/laravel-settings": "dev-master"
     },
     "require-dev": {
-        "composer/composer": "^2.0"
+        "composer/composer": "^2.0",
+        "phpunit/phpunit": "^9.5.10",
+        "orchestra/testbench": "^7.22.0"
     },
     "autoload": {
         "psr-4": {
             "Krzychu12350\\MetasploitApi\\": "src/",
-            "Krzychu12350\\MetasploitApi\\MetasploitApiGenerator\\": "",
-            "Krzychu12350\\Phpmetasploit\\AuthApiMethods\\": ""
+            "Krzychu12350\\MetasploitApi\\MetasploitApiGenerator\\": ""
         },
         "classmap": [
-
         ]
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Krzychu12350\\MetasploitApi\\Tests\\": "tests"
+        }
     },
     "config": {
         "allow-plugins": {
@@ -35,7 +40,9 @@
         }
     },
     "scripts": {
-        "test": "@php --version",
+        "tests": [
+            "phpunit tests"
+        ],
         "generate": "Krzychu12350\\MetasploitApi\\MetasploitApiGenerator::generateApi"
     },
     "extra": {
